<resources>
    <string name="app_name">LK Template</string>
    <string name="app_subtitle">Strikingly good software at breakneck speeds.</string>
    <string name="already_have_account">I already have an account</string>
    <string name="try_it_out">Try It Out</string>
    <string name="emailAddress">Email Address</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email_to_login">Enter your email address to log into the app:</string>
    <string name="anon_log_in">Show me what it\'s like</string>
    <string name="log_out">Log Out</string>
    <string name="or">Or,</string>
    <string name="books">Books</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="deep_link_intent">Deep Link</string>
    <string name="check_email">A link to log in to the app was sent to your email!</string>
    <string name="invalid_email_address">Please enter a valid email address.</string>
    <string name="generic_error">An error occurred</string>
    <string name="deep_link_was_invalid_server">The deep link was invalid. Could not find a server that matched the link.</string>
    <string name="deep_link_was_invalid_credentials">The deep link was invalid. Login credentials did not work.</string>
    <string name="welcome_x">"Welcome, %1$s!"</string>
    <string name="user_email">You are logged in as %1$s</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscription_link">Manage Your Subscription</string>
    <string name="pin">PIN</string>
    <string name="email_sent">Email sent!  You can either click the link in your email OR enter the received PIN.</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="settings">Settings</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="terms_of_service_body">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</string>
    <string name="i_agree">I agree to the terms presented</string>
    <string name="anon_account">You are not logged in.</string>
    <string name="sign_in_email">Sign in with Email</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_apple">Sign in with Apple</string>
    <string name="sign_in_github">Sign in with GitHub</string>
</resources>