<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              tools:requires="onResult: ()->Unit"
             xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
             android:transitionGroup="true"
              android:padding="@dimen/spacing"
        >
    <TextView
            style="@style/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/terms_of_service"
            android:padding="@dimen/spacing"
            />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
        <TextView
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_service_body"
                android:padding="@dimen/spacing"
                />
    </ScrollView>

    <CheckBox
            android:id="@+id/agree"
            style="@style/SubHeader"
            android:text="@string/i_agree"
            android:layout_margin="@dimen/spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/submit"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            />

</LinearLayout>