<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:requires="onResult: (server: ServerOption, token: String)->Single[Unit]"
        >

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/background"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    style="@style/Header"
                    />

            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginVertical="10dp"
                    android:src="@drawable/logo"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:gravity="center"
                    android:text="@string/enter_email_to_login"
                    style="@style/SubHeader"
                    >

            </TextView>

            <EditText
                    android:id="@+id/email"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    style="@style/TextInput"
                    android:gravity="center"
                    android:inputType="text|textEmailAddress"
                    android:hint="@string/emailAddress"
                    android:autofillHints="emailAddress"
                    />

            <EditText
                    android:id="@+id/pin"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="8dp"
                    style="@style/TextInput"
                    android:gravity="center"
                    android:inputType="number|numberPassword"
                    android:hint="@string/pin"
                    />


            <ViewFlipper
                    android:id="@+id/submitWorking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    >

                <Button
                        android:id="@+id/submitEmail"
                        style="@style/ButtonBase"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:text="@string/log_in"
                        tools:reset="@root/session"
                        tools:provides="session: Session"
                        />

            </ViewFlipper>

            <Button
                    android:id="@+id/anonLogin"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    style="@style/ButtonBase"
                    android:text="@string/anon_log_in"
                    android:layout_marginBottom="16dp"
            />

            <Button
                    android:id="@+id/google"
                    style="@style/ButtonBase"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/google"
                    />

            <Button
                    android:id="@+id/apple"
                    style="@style/ButtonBase"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/apple"
                    />

            <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginVertical="24dp"
                    >

            </View>
        </LinearLayout>
    </ScrollView>

    <TextView
            android:id="@+id/selectedServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="16dp"
            style="@style/Body"
            tools:text="Staging"
            />

</FrameLayout>
