<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
        >

    <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/landing_background"
            android:scaleType="centerCrop"
            />

    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundAlpha"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/spacing2"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:safeInsets="all"
            android:orientation="vertical">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/logo_title"
                android:padding="@dimen/spacing2"
                android:contentDescription="@string/app_name"
                />
        <TextView
                style="@style/SubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_margin="@dimen/spacing2"
                android:text="@string/app_subtitle"
                />
        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
        <Button
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anon_log_in"
                android:id="@+id/anonLogin"
                tools:goTo="@layout/app_explanation"
                />
        <Button
                style="@style/ButtonAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:id="@+id/signUp"
                tools:goTo="@layout/log_in"
                />
        <Button
                style="@style/ButtonSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:id="@+id/logIn"
                tools:goTo="@layout/log_in"
                />
    </LinearLayout>

</FrameLayout>