<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        tools:requires="session: Session"
>
    <ViewFlipper
            android:id="@+id/loadWorking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
    >
        <LinearLayout
                android:padding="32dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
        >

            <TextView
                    android:id="@+id/welcomeEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="You are logged in as example@email.com"
                    style="@style/Body"
            />

            <Button
                    android:id="@+id/subscriptionLink"
                    style="@style/Button"
                    android:textAllCaps="false"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:layout_marginHorizontal="32dp"
                    android:text="@string/subscribe"
                    tools:reset="@root/login"
                    tools:onStack="root"
            />

            <Button
                    android:id="@+id/manageSubscription"
                    style="@style/Button"
                    android:textAllCaps="false"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:layout_marginHorizontal="32dp"
                    android:text="@string/subscription_link"
                    tools:reset="@root/login"
                    tools:onStack="root"
            />

            <Button
                    android:id="@+id/logout"
                    style="@style/Button"
                    android:textAllCaps="false"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:layout_marginHorizontal="32dp"
                    android:text="@string/log_out"
                    tools:reset="@root/login"
                    tools:onStack="root"
                    tools:provides="onResult: (server: ServerOption, token: String)->Single[Unit]"
            />
        </LinearLayout>
    </ViewFlipper>
</ScrollView>